Atualização dos códigos de front end do app web

--- a/App Web (Front-End)/form.html
+++ b/App Web (Front-End)/form.html
@@ -34,7 +34,7 @@
 						<li class="star-icon" data-avaliacao="5"></li>
 					</ul>
 				</div>
-				<div class="container-avaliacao" id="hitoria">
+				<div class="container-avaliacao" id="historia">
 					<div class="titulo-avaliacao">
 						<h6>História:</h6>
 					</div>
@@ -62,13 +62,14 @@
 					<h6 id="review-h6">Sua review:</h6>
 					<div class="textarea">
 						<textarea
-							name="textreview"
 							id="textreview"
 							placeholder="Digite sua Review aqui..."
 						></textarea>
 					</div>
 				</div>
-				<button class="form-submit-button">Enviar</button>
+				<button class="form-submit-button" id="btnSubmit">
+					Enviar
+				</button>
 			</form>
 		</div>
 	</body>
