Ajuste na ui para alinhar com figma

--- a/App Web (Front-End)/form.html
+++ b/App Web (Front-End)/form.html
@@ -8,6 +8,7 @@
 		<title>Review</title>
 	</head>
 	<body>
+		<h1><img src="./assets/img/logo2.png" alt="Game Reviewer" /></h1>
 		<div class="form-container">
 			<form action="#">
 				<div class="container-avaliacao" id="grafico">
