--- a/App Web (Front-End)/index.html
+++ b/App Web (Front-End)/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/geral.css" />
-    <link rel="stylesheet" href="./assets/css/gameList.css" />
-    <title>Estande App</title>
-  </head>
-  <body>
-    <h1>Catálogo de Jogos</h1>
-    <div class="game-div"></div>
-  </body>
-  <script src="./js/gameList.js"></script>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./assets/css/geral.css" />
+		<link rel="stylesheet" href="./assets/css/gameList.css" />
+		<title>Estande App</title>
+	</head>
+	<body>
+		<h1><img src="./assets/img/logo2.png" alt="Game Reviewer" /></h1>
+		<div class="container-catalogo"></div>
+	</body>
+	<script src="./js/gameList.js"></script>
 </html>
