Layout da tela de catálogo feita no figma foi reproduzida com sucesso. Dados de testes adicionados manualmente à serem removidos posteriormente

--- a/App Web (Front-End)/index.html
+++ b/App Web (Front-End)/index.html
@@ -9,7 +9,44 @@
 	</head>
 	<body>
 		<h1><img src="./assets/img/logo2.png" alt="Game Reviewer" /></h1>
-		<div class="container-catalogo"></div>
+		<div class="container-catalogo">
+			<div class="game-div">
+				<img
+					class="img-capa"
+					src="./assets/img/capa_diabloiv.jpg"
+					alt="Capa Diablo IV"
+				/>
+				<ul class="game-data">
+					<li class="li-title">Diablo IV</li>
+					<li class="li-data">Média: 5.0</li>
+					<li class="li-data">N° Reviews: 2K</li>
+				</ul>
+			</div>
+			<div class="game-div">
+				<img
+					class="img-capa"
+					src="./assets/img/capa_valorant.jpg"
+					alt="Capa Valorant"
+				/>
+				<ul class="game-data">
+					<li class="li-title">Valorant</li>
+					<li class="li-data">Média: 3.9</li>
+					<li class="li-data">N° Reviews: 5K</li>
+				</ul>
+			</div>
+			<div class="game-div">
+				<img
+					class="img-capa"
+					src="./assets/img/capa_csgo2.jpg"
+					alt="Capa CS:GO 2"
+				/>
+				<ul class="game-data">
+					<li class="li-title">CS:GO 2</li>
+					<li class="li-data">Média: 4.5</li>
+					<li class="li-data">N° Reviews: 10M</li>
+				</ul>
+			</div>
+		</div>
 	</body>
 	<script src="./js/gameList.js"></script>
 </html>
