Página de catálogo de jogos agora está funcionando dinamicamente apartir dos dados da api

--- a/App Web (Front-End)/index.html
+++ b/App Web (Front-End)/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<h1><img src="./assets/img/logo2.png" alt="Game Reviewer" /></h1>
 		<div class="container-catalogo">
-			<div class="game-div">
+			<!-- <div class="game-div">
 				<img
 					class="img-capa"
 					src="./assets/img/capa_diabloiv.jpg"
@@ -45,7 +45,7 @@
 					<li class="li-data">Média: 4.5</li>
 					<li class="li-data">N° Reviews: 10M</li>
 				</ul>
-			</div>
+			</div> -->
 		</div>
 	</body>
 	<script src="./js/gameList.js"></script>
